Bar graph showing
Everything is working ... i am a fool

--- a/portfolio/src/app/app.component.html
+++ b/portfolio/src/app/app.component.html
@@ -48,7 +48,7 @@
 <!-- <app-form></app-form> 
 <app-signup></app-signup> -->
 <!-- <app-result></app-result> -->
-
+<app-view-result></app-view-result>
 <!-- <router-outlet></router-outlet> -->
 
 
