--- a/portfolio/src/app/app.component.html
+++ b/portfolio/src/app/app.component.html
@@ -1,6 +1,6 @@
-<!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Tiger Tech</a>
+    <a class="navbar-brand" href="#">VTU Results</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -10,11 +10,11 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#" routerLink="/home" routerLinkActive="active">Home</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#" routerLink="/getOne" routerLinkActive="active">Get
             One</a>
-        </li>
-        <li class="nav-item">
+        </li> -->
+        <!-- <li class="nav-item">
           <a class="nav-link" href="#" routerLink="/signup-in" routerLinkActive="active">Sign-Up/in</a>
         </li>
         <li class="nav-item dropdown">
@@ -34,22 +34,23 @@
         <li class="nav-item">
           <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
         </li>
-      </ul>
+      
       <form class="d-flex">
         <input [(ngModel)]="value" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         {{value}}
         <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
+      </form> -->
+    </ul>
     </div>
   </div>
-</nav> -->
+</nav>
 
 <!-- <app-slides></app-slides> -->
 <!-- <app-form></app-form> 
 <app-signup></app-signup> -->
 <!-- <app-result></app-result> -->
-<app-view-result></app-view-result>
-<!-- <router-outlet></router-outlet> -->
+<!-- <app-view-result></app-view-result> -->
+<router-outlet></router-outlet>
 
 
 
