--- a/portfolio/src/app/view-result/view-result.component.css
+++ b/portfolio/src/app/view-result/view-result.component.css
@@ -4,10 +4,13 @@
     flex-direction: column;
     justify-content: center;
     align-items: center; */
-    top: 2rem;
+    top: 1rem;
 } 
 *{
     background-color: white;
+    margin: 10px;
+    
+    padding: 0;
 }
 
 .tabClass1{
@@ -18,14 +21,16 @@
     align-items: center;
     top: 0rem;
 } 
+
 table{
+    width: 99%;
     position: relative;
-    width: 100%;
     border-collapse: separate;
-    border-spacing: 0 0em;
+  border-spacing: 0 0px;
     border-radius: 10px;
     /* background-color: white; */
     border: solid lightcoral 1px;
+    border-width: 1px 0;
 }
 
 /* table {
