--- a/portfolio/src/app/view-result/view-result.component.html
+++ b/portfolio/src/app/view-result/view-result.component.html
@@ -15,10 +15,10 @@
           </thead>
           <tbody>
             <tr *ngFor="let obj of TopperObj">
-              <th scope="row">{{ obj.name }}</th>
-              <td>{{ obj.usn }}</td>
+              <td scope="row" style="font-size:18px ; font-family: 'Times New Roman', Times, serif; position: relative; width: 40%;">{{ obj.name }}</td>
+              <td style="text-align: center">{{ obj.usn }}</td>
               <td style="text-align: center">{{ obj.totalmarks }}</td>
-              <td style="text-align: center">{{ obj.percentage }}%</td>
+              <td style="text-align: center;color: green;" >{{ obj.percentage }}%</td>
             </tr>
           </tbody>
         </table>
@@ -31,14 +31,13 @@
             mat-raised-button
             color="primary"
             id="button"
-            (click)="openPDF()"
-          >
+            (click)="openPDF('Topper')">
             Download
           </button>
         </div>
         <p-chart
           type="bar"
-          [data]="datas"
+          [data]="datas11"
           width="100%"
           [options]="options"
           height="100vh"
@@ -46,106 +45,106 @@
         &nbsp;
       </mat-tab>
 
+
+
+
+
+
       <mat-tab label="Subject Toppers">
         <table
-          id="dtBasicExample"
           class="table table-striped table-bordered table-sm mat-elevation-z8"
-          cellspacing="0"
         >
           <thead>
             <tr style="text-align: center">
-              <th class="th-sm">Name</th>
-              <th class="th-sm">Semster</th>
-              <th class="th-sm">Subject</th>
-              <th class="th-sm">IA Marks</th>
-              <th class="th-sm">EA Marks</th>
-              <th class="th-sm">Total Marks</th>
+              <th scope="col">Name</th>
+              <th scope="col">USN</th>
+              <th scope="col">Subject</th>
+              <th scope="col">Mark</th>
             </tr>
           </thead>
           <tbody>
             <tr *ngFor="let obj of SubjectTopperObj">
-              <th scope="row">{{ obj.studentId }}</th>
-              <td>{{ obj.semId }}</td>
-              <td>{{ obj.subId }}</td>
-              <td style="text-align: center">{{ obj.ia }}</td>
-              <td style="text-align: center">{{ obj.ea }}</td>
-              <td style="text-align: center">{{ obj.totalMarksPerSubject }}</td>
+              <td scope="row" style="font-size:18px ; font-family: 'Times New Roman', Times, serif; position: relative; width: 40%;">{{ obj.Student[0].name }}</td>
+              <td style="text-align: center">{{ obj.Student[0].usn }}</td>
+              <td style="text-align: center">{{ obj.Subject[0].subject }}</td>
+              <td style="text-align: center">{{ obj.totalMarksPerSubject}}</td>
             </tr>
           </tbody>
         </table>
 
         <!-- <mat-paginator></mat-paginator> -->
-        <div class="tabClass1">
+
+        <div class="tabClass1" *ngIf="!btnhidden">
           <!-- <button mat-raised-button color="primary">View Graph</button> &nbsp; -->
-          <button mat-raised-button color="primary">Download</button>
+          <button
+            mat-raised-button
+            color="primary"
+            id="button"
+            (click)="openPDF('Subject Topper')"
+          >
+            Download
+          </button>
         </div>
+        <p-chart
+          type="bar"
+          [data]="datas22"
+          width="100%"
+          [options]="options"
+          height="100vh"
+
+        ></p-chart>
+        &nbsp;
       </mat-tab>
 
-      <mat-tab label="Fails"
-        ><table
-          id="dtBasicExample"
-          class="table table-striped table-bordered table-sm mat-elevation-z8"
-          cellspacing="0"
-          style="width: 100%"
+
+
+
+
+
+      <mat-tab label="Fails">
+        <table
+        class="table table-bordered table-sm mat-elevation-z8"
+        style="table-layout: auto;">
+        <thead>
+          <tr style="text-align: center; position: relative;" >
+            <th scope="col" *ngFor="let obj of SubjectFailObj" style="font-size:15px ;">{{obj[0].Subject[0].subject}}-{{obj[0].Subject[0].subcode}} </th>
+          </tr>
+        </thead>
+        
+        <tbody>
+          <tr>
+            <td  *ngFor="let sub of SubjectFailObj"><div  *ngFor="let std of sub">{{std.Student[0].name}}</div></td>
+          </tr>
+      
+        </tbody>
+      </table>
+
+      <!-- <mat-paginator></mat-paginator> -->
+
+      <div class="tabClass1" *ngIf="!btnhidden">
+        <!-- <button mat-raised-button color="primary">View Graph</button> &nbsp; -->
+        <button
+          mat-raised-button
+          color="primary"
+          id="button"
+          (click)="openPDF('Fails')"
         >
-          <thead>
-            <tr style="text-align: center">
-              <th class="th-sm">
-                <button mat-button style="font-weight: bold">
-                  <select
-                    class="form-select"
-                    aria-label="Default select example"
-                  >
-                    <option
-                      *ngFor="let obj of SubjectTopperObj"
-                      [ngValue]="obj"
-                    >
-                      {{ obj.subId }}
-                    </option>
-                  </select>
-                </button>
-              </th>
-              <th class="th-sm">Semester</th>
-              <th class="th-sm">Subject</th>
-              <th class="th-sm">IA Marks</th>
-              <th class="th-sm">EA Marks</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr *ngFor="let obj of SubjectTopperObj; let i = index">
-              <td scope="row" style="text-align: center; width: 20%">
-                {{ i + 1 }}
-              </td>
-              <td>{{ obj.semId }}</td>
-              <td>{{ obj.subId }}</td>
-              <td style="text-align: center">{{ obj.ia }}</td>
-              <td style="text-align: center">{{ obj.ea }}</td>
-            </tr>
-          </tbody>
-        </table>
-
-        <!-- <table
-        id="dtBasicExample"
-        class="table table-striped table-bordered table-sm mat-elevation-z8"
-        cellspacing="0"
-        style="width: 100%">
-
-        <thead >
-          <tr *ngFor="let obj of SubjectFailObj;let i=index ">
-            <th style="text-align: center" *ngFor="let a is obj.length">{{obj[a].totalMarksPerSubject}}</th>
-          </tr> -->
-
-        <!-- <mat-paginator></mat-paginator> -->
-        <div class="tabClass1">
-          <!-- <button mat-raised-button color="primary">View Graph</button> &nbsp; -->
-          <button mat-raised-button color="primary">Download</button>
-        </div>
-        -->
+          Download
+        </button>
+      </div>
+      <!-- <p-chart
+        type="bar"
+        [data]="datas11"
+        width="100%"
+        [options]="options"
+        height="100vh"
+      ></p-chart>
+      &nbsp; -->
       </mat-tab>
     </mat-tab-group>
   </div>
 
-  CSS only -->
+  <!-- CSS only  -->
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
     rel="stylesheet"
