--- a/portfolio/src/app/home/home.component.html
+++ b/portfolio/src/app/home/home.component.html
@@ -1,1 +1,10 @@
-<p>home works!</p>
+
+  
+<body>
+    <div class="heading">
+        
+        <ngx-typed-js [strings]="['Overall Toppers', 'Toppers', 'Fails']" [loop]="true" [typeSpeed]="40" [startDelay]="1000" [shuffle]="true"  [backSpeed]="100">
+             <h1>Want to know <span class="typing"></span>?</h1>
+          </ngx-typed-js>
+    </div>
+</body>
