--- a/portfolio/src/app/result/result.component.html
+++ b/portfolio/src/app/result/result.component.html
@@ -69,7 +69,7 @@
     </div>
   </div>
 
-  <div class="help-icon">
+  <div class=" help-icon tabClass">
     <a
       data-bs-toggle="modal"
       data-bs-target="#exampleModalLong"
