--- a/portfolio/src/app/view-result/view-result.component.css
+++ b/portfolio/src/app/view-result/view-result.component.css
@@ -29,7 +29,7 @@ table{
   border-spacing: 0 0px;
     border-radius: 10px;
     /* background-color: white; */
-    border: solid lightcoral 1px;
+    border: solid rgb(29, 28, 28) 1px;
     border-width: 1px 0;
 }
 
