--- a/portfolio/src/app/app.component.html
+++ b/portfolio/src/app/app.component.html
@@ -8,48 +8,14 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#" routerLink="/home" routerLinkActive="active">Home</a>
+          <a class="nav-link active" aria-current="page" href="#" routerLink="/" routerLinkActive="active">Home</a>
         </li>
-        <!-- <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#" routerLink="/getOne" routerLinkActive="active">Get
-            One</a>
-        </li> -->
-        <!-- <li class="nav-item">
-          <a class="nav-link" href="#" routerLink="/signup-in" routerLinkActive="active">Sign-Up/in</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-            aria-expanded="false">
-            Dropdown
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li>
-              <hr class="dropdown-divider">
-            </li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-        </li>
-      
-      <form class="d-flex">
-        <input [(ngModel)]="value" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        {{value}}
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form> -->
     </ul>
     </div>
   </div>
 </nav>
 
-<!-- <app-slides></app-slides> -->
-<!-- <app-form></app-form> 
-<app-signup></app-signup> -->
-<!-- <app-result></app-result> -->
-<!-- <app-view-result></app-view-result> -->
+
 <router-outlet></router-outlet>
 
 
