--- a/portfolio/src/app/result/result.component.css
+++ b/portfolio/src/app/result/result.component.css
@@ -1,3 +1,4 @@
+
 .tabClass{
     position: relative;
     display: flex;
@@ -37,5 +38,8 @@
 
 body{
     
-    background-color: rgba(147, 181, 243, 0.26);
+background-color: #0f182f;
+height: 44em;
+padding-top: 1em;
+padding-bottom: 1em;
 }
