--- a/portfolio/src/app/result/result.component.html
+++ b/portfolio/src/app/result/result.component.html
@@ -1,130 +1,143 @@
 <body>
-  <!-- *ngIf="submitload" -->
-  <div *ngIf="submitload">
-    <mat-progress-bar mode="indeterminate"></mat-progress-bar>
-  </div>
-  <!-- Modal -->
-  <div
-    class="modal fade"
-    id="exampleModalLong"
-    tabindex="-1"
-    role="dialog"
-    aria-labelledby="exampleModalLabel"
-    aria-hidden="true"
+  <div class="card container" style="width: 30rem;
+                                border-radius: 2em;
+                                margin-top: 1em;
+                                border: 1px solid #0f182f;
+                                box-shadow: 5px 4.5px 9px #0f182f;"
   >
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h3
-            style="
-              font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial,
-                sans-serif;
-            "
-            class="modal-title"
-            id="exampleModalLabel"
-          >
-            Sample Sheets
-          </h3>
-          <button
-            type="button"
-            class="close"
-            data-bs-dismiss="modal"
-            aria-label="Close"
-          >
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <h3 style="font-weight: bold">SHEET 1</h3>
-          <img
-            src="../../assets/images/sheet1.png"
-            alt=""
-            style="width: 100%; position: relative"
-          />
-          <ul>
-            <li>blah</li>
-            <li>blah</li>
-          </ul>
-          <h3 style="font-weight: bold">SHEET 2</h3>
-          <img
-            src="../../assets/images/sheet2.png"
-            alt=""
-            style="width: 100%; position: relative"
-          />
-          <ul>
-            <li>blah</li>
-            <li>blah</li>
-          </ul>
-        </div>
-        <div class="modal-footer">
-          <button
-            type="button"
-            class="btn btn-secondary"
-            data-bs-dismiss="modal"
-          >
-            Close
-          </button>
+
+    <div class="card-body " style="height: 35em;">
+      <div *ngIf="submitload">
+        <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+      </div>
+      <!-- Modal -->
+      <div
+        class="modal fade"
+        id="exampleModalLong"
+        tabindex="-1"
+        role="dialog"
+        aria-labelledby="exampleModalLabel"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h3
+                style="
+                  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial,
+                    sans-serif;
+                "
+                class="modal-title"
+                id="exampleModalLabel"
+              >
+                Sample Sheets
+              </h3>
+              <button
+                type="button"
+                class="close"
+                data-bs-dismiss="modal"
+                aria-label="Close"
+              >
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <h3 style="font-weight: bold">SHEET 1</h3>
+              <img
+                src="../../assets/images/sheet1.png"
+                alt=""
+                style="width: 100%; position: relative"
+              />
+              <ul>
+                <li>blah</li>
+                <li>blah</li>
+              </ul>
+              <h3 style="font-weight: bold">SHEET 2</h3>
+              <img
+                src="../../assets/images/sheet2.png"
+                alt=""
+                style="width: 100%; position: relative"
+              />
+              <ul>
+                <li>blah</li>
+                <li>blah</li>
+              </ul>
+            </div>
+            <div class="modal-footer">
+              <button
+                type="button"
+                class="btn btn-secondary"
+                data-bs-dismiss="modal"
+              >
+                Close
+              </button>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-  </div>
 
-  <div class=" help-icon tabClass">
-    <a
-      data-bs-toggle="modal"
-      data-bs-target="#exampleModalLong"
-      class="badge bg-danger"
-      style="text-decoration: none; color: azure"
-    >
-      <!-- <mat-icon
+      <div class="help-icon tabClass">
+        <a
+          data-bs-toggle="modal"
+          data-bs-target="#exampleModalLong"
+          class="badge bg-danger"
+          style="text-decoration: none; color: azure"
+        >
+          <!-- <mat-icon
         aria-hidden="false"
         aria-label="Example home icon"
         fontIcon="home"
         title="Click to know more"
       ></mat-icon> -->
-      info
-    </a>
-  </div>
+          info
+        </a>
+      </div>
 
-  <div class="tabClass">
-    <form action="" method="post" #data="ngForm" (ngSubmit)="AddBatch(data)">
-      <p-dropdown
-        autoWidth="false"
-        [style]="{ width: '100px' }"
-        [options]="batch"
-        [(ngModel)]="selectedBatch"
-        optionLabel="name"
-        optionValue="code"
-        name="batch"
-      ></p-dropdown>
-      &nbsp;&nbsp;
-      <p-dropdown
-        autoWidth="false"
-        [style]="{ width: '100px' }"
-        [options]="sem"
-        [(ngModel)]="selectedSem"
-        optionLabel="name"
-        optionValue="code"
-        name="sem"
-      ></p-dropdown>
-      &nbsp;&nbsp;
-      <button pButton type="submit" label="Choose" pRipple></button>
-    </form>
-    <p-toast key="duplicate"></p-toast>
+      <div class="tabClass">
+        <form
+          action=""
+          method="post"
+          #data="ngForm"
+          (ngSubmit)="AddBatch(data)"
+        >
+          <p-dropdown
+            autoWidth="false"
+            [style]="{ width: '100px' }"
+            [options]="batch"
+            [(ngModel)]="selectedBatch"
+            optionLabel="name"
+            optionValue="code"
+            name="batch"
+          ></p-dropdown>
+          &nbsp;&nbsp;
+          <p-dropdown
+            autoWidth="false"
+            [style]="{ width: '100px' }"
+            [options]="sem"
+            [(ngModel)]="selectedSem"
+            optionLabel="name"
+            optionValue="code"
+            name="sem"
+          ></p-dropdown>
+          &nbsp;&nbsp;
+          <button pButton type="submit" label="Choose" pRipple style="background-color: #32cd61;"></button>
+        </form>
+        <p-toast key="duplicate"></p-toast>
 
-    <div class="tabClass" *ngIf="spinnerload">
-      <!-- <mat-spinner color="warn"></mat-spinner> -->
-      <mat-progress-bar mode="indeterminate"></mat-progress-bar>
-    </div>
+        <div class="tabClass" *ngIf="spinnerload">
+          <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+        </div>
 
-    <!-- *ngIf="uploadFile" -->
-    <div style="margin-top: 6em" *ngIf="uploadFile">
-      <p-fileUpload
-        style="height: 30vh"
-        name="myfile[]"
-        [customUpload]="true"
-        (uploadHandler)="UploadFile($event)"
-      ></p-fileUpload>
+        <!-- *ngIf="uploadFile" -->
+        <div style="margin-top: 6em" *ngIf="uploadFile">
+          <p-fileUpload
+            style="height: 30vh"
+            name="myfile[]"
+            [customUpload]="true"
+            (uploadHandler)="UploadFile($event)"
+          ></p-fileUpload>
+        </div>
+      </div>
     </div>
   </div>
 </body>
