--- a/portfolio/src/app/view-result/view-result.component.html
+++ b/portfolio/src/app/view-result/view-result.component.html
@@ -29,7 +29,7 @@
               <td style="text-align: center">{{ obj.usn }}</td>
               <td style="text-align: center">{{ obj.totalmarks }}</td>
               <td style="text-align: center; color: green">
-                {{ obj.percentage }}%
+                <strong>{{ obj.percentage }}%</strong>
               </td>
             </tr>
           </tbody>
