--- a/portfolio/src/app/result/result.component.css
+++ b/portfolio/src/app/result/result.component.css
@@ -6,9 +6,7 @@
     justify-content: center;
     align-items: center;
     top: 3rem;
-    height: 120; /* display: flex;
-    flex-direction: column;
-    justify-content: center; */
+    height: 120;   
 }
 .tabClass2{
     position: fixed;
