added the timeline (steps)

--- a/portfolio/src/app/home/home.component.html
+++ b/portfolio/src/app/home/home.component.html
@@ -19,4 +19,64 @@
     </div>
 </div>
 
+<div class="steps">
+    <div class="container">
+        <div class="timeline">
+                <div class="timeline-row">
+                    <div class="timeline-time">
+                        STEP:1
+                    </div>
+                    <div class="timeline-content">
+                        <h3>Create Excel file !</h3>
+                        <p>create the excel file as per our requirement. The excel file contains all the informations such as marks etc. If data is already in database then no need to create it again</p>
+                    </div>
+                </div>
+        
+                <div class="timeline-row">
+                    <div class="timeline-time">
+                        STEP:2
+                    </div>
+                    <div class="timeline-content">
+                        <h3>Choose the batch and sem!</h3>
+                        <p>
+                           After step1 you are redirected to next page in which you have to select the corressponding batch and sem and click <strong>chose</strong> button 
+                        </p>
+                    </div>
+                </div>
+        
+                <div class="timeline-row">
+                    <div class="timeline-time">
+                        STEP:3
+                    </div>
+                    <div class="timeline-content">
+                        <h3>Upload file!</h3>
+                        <p>You will get upload option if and only if the data is not available in database </p>
+                    </div>
+                </div>
+        
+                <div class="timeline-row">
+                    <div class="timeline-time">
+                        STEP:4
+                    </div>
+                    <div class="timeline-content">
+                        <h3>View Result!</h3>
+                        <p>After successful completion of uploading file you will get an pop up message where when you click the button it will redirected to view result page where the result can be shown as Topper,subject topper and Failed</p>
+                    </div>
+                </div>
+        
+                <div class="timeline-row">
+                    <div class="timeline-time">
+                        STEP:5
+                    </div>
+                    <div class="timeline-content">
+                        <h3>Download!</h3>
+                        <p class="no-margin">click download button to download as pdf for corressponding tag.</p>
+                        
+                    </div>
+                </div>
+        
+                
+            </div>
+        </div>
+</div>
 
