--- a/portfolio/src/app/result/result.component.html
+++ b/portfolio/src/app/result/result.component.html
@@ -122,7 +122,7 @@
           &nbsp;&nbsp;
           <button pButton type="submit" label="Choose" pRipple style="background-color: #32cd61;"></button>
         </form>
-        <p-toast key="duplicate"></p-toast>
+        <p-toast key="message"></p-toast>
 
         <div class="tabClass" *ngIf="spinnerload">
           <mat-progress-bar mode="indeterminate"></mat-progress-bar>
