--- a/portfolio/src/app/view-result/view-result.component.html
+++ b/portfolio/src/app/view-result/view-result.component.html
@@ -122,10 +122,10 @@
             <tr style="text-align: center; position: relative">
               <th
                 scope="col"
-                *ngFor="let obj of SubjectFailObj"
+                *ngFor="let obj of Failedsubject"
                 style="font-size: 15px"
               >
-                {{ obj[0].Subject[0].subject }}-{{ obj[0].Subject[0].subcode }}
+                {{ obj}}
               </th>
             </tr>
           </thead>
